--- a/Modules/BAPT_Styles.cls
+++ b/Modules/BAPT_Styles.cls
@@ -16,10 +16,13 @@ Private m_Default As BAPT_Style
 
 Private m_Table As BAPT_Style
 
+Private m_Vals As BAPT_Style    ' better name for this ??
+
 Private m_Val As BAPT_Style
 Private m_Total As BAPT_Style
 Private m_GrandTotal As BAPT_Style
 
+Private m_AxisContainer As BAPT_Style
 Private m_AxisLabel As BAPT_Style
 Private m_RowLabel As BAPT_Style
 Private m_ColLabel As BAPT_Style
@@ -38,6 +41,10 @@ Public Property Get Table() As BAPT_Style
     Set Table = m_Table
 End Property
 
+Public Property Get Vals() As BAPT_Style
+    Set Vals = m_Vals
+End Property
+
 Public Property Get Val() As BAPT_Style
     Set Val = m_Val
 End Property
@@ -48,6 +55,10 @@ End Property
 
 Public Property Get GrandTotal() As BAPT_Style
     Set GrandTotal = m_GrandTotal
+End Property
+
+Public Property Get AxisContainer() As BAPT_Style
+    Set AxisContainer = m_AxisContainer
 End Property
 
 Public Property Get AxisLabel() As BAPT_Style
@@ -78,10 +89,14 @@ Private Sub Class_Initialize()
     Set m_Default = New BAPT_Style
     
     Set m_Table = New BAPT_Style
+    
+    Set m_Vals = New BAPT_Style
+    
     Set m_Val = New BAPT_Style
     Set m_Total = New BAPT_Style
     Set m_GrandTotal = New BAPT_Style
     
+    Set m_AxisContainer = New BAPT_Style
     Set m_AxisLabel = New BAPT_Style
     Set m_RowLabel = New BAPT_Style
     Set m_ColLabel = New BAPT_Style
@@ -107,10 +122,14 @@ Friend Function ToCSS() As String
     
     strText.AddLine ".pvtUi { " & Default.ToCSS & " }"
     
-    strText.AddLine "table.pvtTable { " & Table.ToCSS & " }"
+    strText.AddLine "table .pvtVals { " & Vals.ToCSS & " }"
+    
+    strText.AddLine "table.pvtTable tbody tr td { " & Table.ToCSS & " important! }"
     strText.AddLine "table.pvtTable .pvtVal { " & Val.ToCSS & " }"
     strText.AddLine "table.pvtTable .pvtTotal { " & Total.ToCSS & " }"
     strText.AddLine "table.pvtTable .pvtGrandTotal { " & GrandTotal.ToCSS & " }"
+    
+    strText.AddLine "table.pvtUi .pvtAxisContainer { " & AxisContainer.ToCSS & " }"
     
     strText.AddLine "table.pvtTable .pvtAxisLabel { " & AxisLabel.ToCSS & " }"
     strText.AddLine "table.pvtTable .pvtRowLabel  { " & RowLabel.ToCSS & " }"
