--- a/Modules/BAPT_Font.cls
+++ b/Modules/BAPT_Font.cls
@@ -8,9 +8,9 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 '###############################################################################################
-'# Copyright (c) 2021, 2022 Thomas Möller                                                      #
+'# Copyright (c) 2021, 2022 Thomas Möller, supported by K.D.Gundermann                         #
 '# MIT License  => https://github.com/team-moeller/better-access-pivottable/blob/main/LICENSE  #
-'# Version 1.50.08  published: 01.11.2022                                                      #
+'# Version 1.51.03  published: 02.11.2022                                                      #
 '###############################################################################################
 
 Option Compare Database
@@ -26,47 +26,55 @@ Private m_IsItalic As Boolean
 Private m_IsBold As Boolean
 
 
-' ### Properties
+'### Properties
 
-Public Property Let Color(ByVal This_Color As String)
-    m_Color = This_Color
+Public Property Let Color(ByVal newValue As String)
+    m_Color = newValue
 End Property
 Public Property Get Color() As String
     Color = m_Color
 End Property
 
-Public Property Let Family(ByVal This_Family As String)
-    m_Family = This_Family
+Public Property Let Family(ByVal newValue As String)
+    m_Family = newValue
 End Property
 Public Property Get Family() As String
     Family = m_Family
 End Property
 
-Public Property Let Size(ByVal This_Size As Integer)
-    m_Size = This_Size
+Public Property Let Size(ByVal newValue As Integer)
+    m_Size = newValue
 End Property
 Public Property Get Size() As Integer
     Size = m_Size
 End Property
 
-Public Property Let IsItalic(ByVal This_IsItalic As Boolean)
-    m_IsItalic = This_IsItalic
+Public Property Let IsItalic(ByVal newValue As Boolean)
+    m_IsItalic = newValue
 End Property
 Public Property Get IsItalic() As Boolean
     IsItalic = m_IsItalic
 End Property
 
-Public Property Let IsBold(ByVal This_IsBold As Boolean)
-    m_IsBold = This_IsBold
+Public Property Let IsBold(ByVal newValue As Boolean)
+    m_IsBold = newValue
 End Property
 Public Property Get IsBold() As Boolean
     IsBold = m_IsBold
 End Property
 
 
-' ### Functions
+'### Instanzing
+
+
+'### Public Functions
+
+
+'### Generator Function
 
 Friend Property Get ToCSS() As String
+
+    'Declarations
     Dim strText As New BAPT_StringBuilder
     
     If Color <> vbNullString Then
