--- a/Modules/BAPT_Style.cls
+++ b/Modules/BAPT_Style.cls
@@ -8,16 +8,20 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 '###############################################################################################
-'# Copyright (c) 2021, 2022 Thomas Möller                                                      #
+'# Copyright (c) 2021, 2022 Thomas Möller, supported by K.D.Gundermann                         #
 '# MIT License  => https://github.com/team-moeller/better-access-pivottable/blob/main/LICENSE  #
-'# Version 1.50.08  published: 01.11.2022                                                      #
+'# Version 1.51.03  published: 02.11.2022                                                      #
 '###############################################################################################
 
 Option Compare Database
 Option Explicit
 
+
+'### Members
+
 Private m_Background As BAPT_Background
 Private m_Font As BAPT_Font
+
 
 '### Properties
 
@@ -29,6 +33,7 @@ Public Property Get Font() As BAPT_Font
     Set Font = m_Font
 End Property
 
+
 '### Instanzing
 
 Private Sub Class_Initialize()
@@ -36,15 +41,23 @@ Private Sub Class_Initialize()
     'Create sub classes
     Set m_Background = New BAPT_Background
     Set m_Font = New BAPT_Font
+    
 End Sub
+
+
+'### Public Functions
+
 
 '### Generator Function
 
 Friend Function ToCSS() As String
+
+    'Declarations
     Dim strText As New BAPT_StringBuilder
     
     strText.Add Background.ToCSS
     strText.Add Font.ToCSS
     
     ToCSS = strText.ToString
+    
 End Function
