--- a/Modules/BAPT_Background.cls
+++ b/Modules/BAPT_Background.cls
@@ -8,42 +8,55 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 '###############################################################################################
-'# Copyright (c) 2021, 2022 Thomas Möller                                                      #
+'# Copyright (c) 2021, 2022 Thomas Möller, supported by K.D.Gundermann                         #
 '# MIT License  => https://github.com/team-moeller/better-access-pivottable/blob/main/LICENSE  #
-'# Version 1.50.08  published: 01.11.2022                                                      #
+'# Version 1.51.03  published: 02.11.2022                                                      #
 '###############################################################################################
 
 Option Compare Database
 Option Explicit
 
+
+'### Members
+
 Private m_Color As String
 Private m_Opacity As Double
 
-' ### Properties
 
-Public Property Let Color(ByVal This_Color As String)
-    m_Color = This_Color
+'### Properties
+
+Public Property Let Color(ByVal newValue As String)
+    m_Color = newValue
 End Property
 Public Property Get Color() As String
     Color = m_Color
 End Property
 
-Public Property Let Opacity(ByVal This_Value As Double)
-    m_Opacity = This_Value
+Public Property Let Opacity(ByVal newValue As Double)
+    m_Opacity = newValue
 End Property
 Public Property Get Opacity() As Double
     Opacity = m_Opacity
 End Property
 
 
-' ### Functions
+'### Instanzing
+
+
+'### Public Functions
+
+
+'### Generator Function
 
 Friend Property Get ToCSS() As String
+
+    'Declarations
     Dim strText As New BAPT_StringBuilder
     
     If Color <> vbNullString Then
         strText.AddLine "background-color: " & Color & ";"
     End If
+    
     If Opacity > 0 Then
         strText.AddLine "opacity: " & Str(Opacity) & ";"
     End If
